# cmake-gtest-auto

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  sum_integers.cpp  sum_integers.hpp
tests/: test.cpp
